--- a/hy352_project/hy352_project/hy352_project.vcxproj.filters
+++ b/hy352_project/hy352_project/hy352_project.vcxproj.filters
@@ -20,15 +20,21 @@
     <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="example.cpp">
+    <ClCompile Include="hy352_gui.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="hy352_gui.cpp">
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="example.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hy352_gui.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LOGO.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
